--- a/app/src/main/res/values-iw-rIL/strings.xml
+++ b/app/src/main/res/values-iw-rIL/strings.xml
@@ -31,7 +31,7 @@
     <string name="activated">הופעל</string>
     <string name="partial_activated">הופעל חלקית</string>
     <string name="selinux_policy_not_loaded_summary">SEPolicy לא נטען כמו שצריך</string>
-    <string name="selinux_policy_not_loaded"><![CDATA[&lt;b&gt;אזהרה:&lt;\/b&gt; SEPolicy לא טעון כמו שצריך, מודולים שמתחברים ל-System Framework לא יעבדו.]]></string>
+    <string name="selinux_policy_not_loaded"><![CDATA[SEPolicy לא טעון כמו שצריך, מודולים שמתחברים ל-System Framework לא יעבדו.]]></string>
     <string name="lsposed_not_active">LSPosed כרגע לא מותקן או מופעל.</string>
     <string name="info_api_version">גרסת API</string>
     <string name="info_framework_version">גרסת Framework</string>
