--- a/app/src/main/res/values-tr-rTR/strings.xml
+++ b/app/src/main/res/values-tr-rTR/strings.xml
@@ -38,11 +38,11 @@
     <string name="activated">Aktif edildi</string>
     <string name="partial_activated">Kısmen etkinleştirildi</string>
     <string name="selinux_policy_not_loaded_summary">SEPolicy düzgün yüklenmemiş</string>
-    <string name="selinux_policy_not_loaded"><![CDATA[<b>WARNING:</b> SEPolicy düzgün yüklenmemiş, System Framework\'u bağlayan modüller çalışmayacaktır.<br/>Lütfen bunu rapor edin <a href="https://github.com/topjohnwu/Magisk/issues"><b>Magisk</b></a> developer.]]></string>
+    <string name="selinux_policy_not_loaded"><![CDATA[SEPolicy düzgün yüklenmemiş, System Framework\'u bağlayan modüller çalışmayacaktır.<br/>Lütfen bunu rapor edin <a href="https://github.com/topjohnwu/Magisk/issues"><b>Magisk</b></a> developer.]]></string>
     <string name="system_inject_fail_summary">Sistem Çerçevesi enjeksiyonu başarısız oldu</string>
-    <string name="system_inject_fail"><![CDATA[<b>WARNING:</b> Sistem Çerçevesi enjekte başarısız oldu.<br/>Bu nadirdir ve neden olabilir <b>Magisk</b> Bazı düşük kaliteli magisk modülleri <br/>Lütfen Riru ve Lsposed dışındaki Magisk modüllerini devre dışı bırakmayı deneyin veya geliştiricilere tam günlüğü gönderin.]]></string>
+    <string name="system_inject_fail"><![CDATA[Sistem Çerçevesi enjekte başarısız oldu.<br/>Bu nadirdir ve neden olabilir <b>Magisk</b> Bazı düşük kaliteli magisk modülleri <br/>Lütfen Riru ve Lsposed dışındaki Magisk modüllerini devre dışı bırakmayı deneyin veya geliştiricilere tam günlüğü gönderin.]]></string>
     <string name="system_prop_incorrect_summary">Sistem desteği yanlış</string>
-    <string name="system_prop_incorrect"><![CDATA[<b>WARNING:</b> Sistem desteği yanlış.<br/>Bazı gerekli sistem özellikleri silindi veya değiştirildi.<br/>Modüller zaman geçersiz olabilir.]]></string>
+    <string name="system_prop_incorrect"><![CDATA[Sistem desteği yanlış.<br/>Bazı gerekli sistem özellikleri silindi veya değiştirildi.<br/>Modüller zaman geçersiz olabilir.]]></string>
     <string name="need_update">güncelleme gerekiyor</string>
     <string name="please_update_summary">Lütfen Lsposed\'in en son sürümünü yükleyin</string>
     <string name="lsposed_not_active">Lsposed şu anda yüklü veya etkin değil.</string>
