--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -164,6 +164,8 @@
     <string name="settings_translation_contributors">翻译贡献者</string>
     <string name="settings_translation">参与翻译</string>
     <string name="settings_translation_summary">帮助我们把 %s 翻译到你的语言</string>
+    <string name="pref_title_enable_auto_add_shortcut">自动新增快捷方式</string>
+    <string name="settings_enable_auto_add_shortcut_summary">在非寄生的管理器中禁用后将不会新增快捷</string>
     <!-- Module Repo -->
     <string name="module_readme">自述文件</string>
     <string name="module_releases">版本</string>
