--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -61,6 +61,8 @@
     <string name="create_shortcut">Create shortcut</string>
     <string name="never_show">Never show</string>
     <string name="failed_to_create_shortcut">Failed to create shortcut: %1$s</string>
+    <string name="update_lsposed">Update LSPosed</string>
+    <string name="update_lsposed_msg">Want to install a new version of LSPosed? The device will reboot after completion</string>
 
     <!-- LogsActivity -->
     <string name="menuSaveToSd">Save</string>
