--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -124,6 +124,7 @@
     <string name="no_scope_selected">You did not select any app. Continue?</string>
     <string name="menu_show_games">Games</string>
     <string name="menu_show_modules">Modules</string>
+    <string name="menu_show_denylist">Denylist</string>
     <string name="failed_to_save_scope_list">Failed save scope list</string>
     <string name="app_description">%1$s\nVersion %2$s</string>
     <string name="use_recommended">Recommended</string>
@@ -142,6 +143,8 @@
     <string name="reboot_required">Reboot is required for apply changes</string>
     <string name="reboot">Reboot</string>
     <string name="menu_hide">Hide</string>
+    <string name="deny_list">%s is on denylist. It may not take effect.</string>
+    <string name="deny_list_info">On denylist</string>
 
     <!-- ModulesActivity and AppListActivity -->
     <string name="modules_other_app">View in other app</string>
